--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.ptc.vuforia.engine": "file:com.ptc.vuforia.engine-10.17.4.tgz",
+    "com.unity.ai.navigation": "1.1.4",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.18",
@@ -12,6 +14,7 @@
     "com.unity.visualscripting": "1.8.0",
     "com.unity.xr.arcore": "4.2.8",
     "com.unity.xr.arfoundation": "4.2.8",
+    "com.unity.xr.interaction.toolkit": "2.3.2",
     "com.unity.xr.management": "4.4.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
